--- a/yhs.yml
+++ b/yhs.yml
@@ -9,6 +9,9 @@ db:
   dbname: yhs
   user: yhs
   password: yhs
-
+  pool_max_conns: 0
+  pool_min_conns: 0
+  pool_max_conn_lifetime: 1800s
+  pool_max_conn_idle_time: 120s
 yhs:
   serverAddr: ":8989"
