add check-required workflow and release workflow
Co-authored-by: Jonathan Giannuzzi <jgiannuzzi@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,3 +132,26 @@ jobs:
         with:
           name: yunikorn-history-server-oci-images-${{ matrix.arch }}
           path: yunikorn-history-server-oci-*.tar
+  # Virtual job that can be configured as a required check before a PR can be merged.
+  # As GitHub considers a check as successful if it is skipped, we need to check its status in
+  # another workflow (check-required.yml) and create a check there.
+  all-required-checks-done:
+    name: All required checks done
+    needs:
+      - go-lint
+      - build
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "All required checks done"
+
+  release:
+    name: Release
+    needs: all-required-checks-done
+    if: ${{ !github.event.repository.fork && github.event_name == 'push' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main') }}
+    permissions:
+      actions: write
+      contents: write
+      pages: write
+      id-token: write
+    secrets: inherit
+    uses: ./.github/workflows/release.yml
