--- a/yhs.yml
+++ b/yhs.yml
@@ -15,3 +15,11 @@ db:
   pool_max_conn_idle_time: 120s
 yhs:
   server_addr: ":8989"
+
+log:
+  log_file_path: "yhs.log"
+  max_size: 5
+  max_backups: 10
+  max_age: 30
+  compress: true
+  log_level: "INFO"
