rename chart folder to chars #19

--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: yunikorn-history-server
-description: A Helm chart for Yunikorn History Server (YHS)
+description: A Helm charts for Yunikorn History Server (YHS)
 
 type: application
 
