change default service type to clusterIP #19

--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -21,7 +21,7 @@ image:
 
 service:
   # -- Service type
-  type: LoadBalancer
+  type: ClusterIP
   # -- Service port
   port: 8989
   # -- Service target port
