--- a/charts/templates/configmap.yaml
+++ b/charts/templates/configmap.yaml
@@ -1,4 +1,3 @@
-{{- $namespace := .Values.common.namespace | required "A valid .common.namespace is required!" -}}
 {{- $yunikornHost := .Values.yunikorn.host | required "A valid .yunikorn.host is required!" -}}
 {{- $yunikornPort := .Values.yunikorn.port | required "A valid .yunikorn.port is required!" -}}
 {{- $yunikornProtocol := .Values.yunikorn.protocol | required "A valid .yunikorn.protocol is required!" -}}
@@ -16,7 +15,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: yhs-config
-  namespace: {{ $namespace }}
+  namespace: {{ .Values.common.namespace }}
   labels:
     app: yunikorn-history-server
     {{- with .Values.common.labels }}
