--- a/charts/templates/service.yaml
+++ b/charts/templates/service.yaml
@@ -6,7 +6,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: yunikorn-history-server
-  namespace: yunikorn
+  namespace: {{ .Values.common.namespace }}
   labels:
     app: yunikorn-history-server
     {{- with .Values.common.labels }}
