--- a/charts/templates/configmap.yaml
+++ b/charts/templates/configmap.yaml
@@ -14,10 +14,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: yhs-config
+  name: {{ include "yunikorn-history-server.fullname" . }}
   namespace: {{ .Values.common.namespace }}
   labels:
-    app: yunikorn-history-server
+    {{- include "yunikorn-history-server.labels" . | nindent 4 }}
     {{- with .Values.common.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
