--- a/charts/templates/configmap.yaml
+++ b/charts/templates/configmap.yaml
@@ -10,11 +10,7 @@
 {{- $dbPoolMaxConnLifetime := .Values.db.poolMaxConnLifetime | required "A valid .db.poolMaxConnLifetime is required!" -}}
 {{- $dbPoolMaxConnIdleTime := .Values.db.poolMaxConnIdleTime | required "A valid .db.poolMaxConnIdleTime is required!" -}}
 {{- $yhsServerAddr := .Values.yhsServerAddr | required "A valid .yhsServerAddr is required!" -}}
-{{- $logFilePath := .Values.log.filePath | required "A valid .log.filePath is required!" -}}
-{{- $logMaxSize := .Values.log.maxSize | required "A valid .log.maxSize is required!" -}}
-{{- $logMaxBackups := .Values.log.maxBackups | required "A valid .log.maxBackups is required!" -}}
-{{- $logMaxAge := .Values.log.maxAge | required "A valid .log.maxAge is required!" -}}
-{{- $logCompress := .Values.log.compress | required "A valid .log.compress is required!" -}}
+{{- $logProduction := .Values.log.production | required "A valid .log.production is required!" -}}
 {{- $logLevel := .Values.log.level | required "A valid .log.level is required!" -}}
 
 
@@ -41,9 +37,5 @@ data:
   YHS_DB_POOL_MAX_CONN_LIFETIME: "{{ $dbPoolMaxConnLifetime }}"
   YHS_DB_POOL_MAX_CONN_IDLE_TIME: "{{ $dbPoolMaxConnIdleTime }}"
   YHS_YHS_SERVER_ADDR: "{{ $yhsServerAddr }}"
-  LOG_FILE_PATH: "{{ $logFilePath }}"
-  LOG_MAX_SIZE: "{{ $logMaxSize }}"
-  LOG_MAX_BACKUPS: "{{ $logMaxBackups }}"
-  LOG_MAX_AGE: "{{ $logMaxAge }}"
-  LOG_COMPRESS: "{{ $logCompress }}"
-  LOG_LEVEL: "{{ $logLevel }}"
+  YHS_LOG_PRODUCTION: "{{ $logProduction }}"
+  YHS_LOG_LEVEL: "{{ $logLevel }}"
