Configuration support for zap logger (#52)
* Configuration support for zap logger #48

* Improve wording for log config variables #48

* Add log configuration to the helm chart #48

* remove logic for log management on file #48

* update log configuration in helm chart #48

* update go mod #48

* update logic for switching between encoders #48

* refactor variable name.

* Update variable naming.

--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -54,3 +54,9 @@ yunikorn:
   port: ""
   # -- Yunikorn scheduler protocol
   protocol: "http"
+
+log:
+    # -- Output type of the log, if true, log will be output in json format
+    jsonFormat: true
+    # -- Log level, one of DEBUG, INFO, WARN, ERROR, DPANIC, PANIC, FATAL
+    level: "INFO"
