Adds web project template for module federation
Add make command that builds the web components


Updates to .gitingore and Makefile

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
 # IDE
 .idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
 
 # Binaries for programs and plugins
 *.exe
@@ -35,3 +49,25 @@ bin/
 
 # Build artifacts
 dist/
+
+# Compiled output
+tmp
+out-tsc
+bazel-out
+
+# Node
+node_modules
+npm-debug.log
+yarn-error.log
+
+# Miscellaneous
+cache
+.sass-cache
+connect.lock
+coverage
+libpeerconnection.log
+testem.log
+typings
+
+# System files
+Thumbs.db
