add scripts and make targets which run integration and e2e tests with dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ assets/
 # Test binary, built with `go test -c`
 *.test
 
+# Test artifacts
+test-reports/
+
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
