--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,3 +70,12 @@ jobs:
             $(printf -- "--tag ${{ vars.DOCKER_REPO }}:%s " ${tags[@]}) \
             $(printf "${{ vars.DOCKER_REPO }}@%s " ${digests[@]})
           echo "::endgroup::"
+
+  # Secrets are placed under `invoke-push` environment
+  invoke-chart-push:
+    name: Invoke Chart push
+    needs: docker-release
+    uses: G-Research/charts/.github/workflows/invoke-push.yaml@master
+    secrets:
+      APP_ID: ${{ secrets.APP_ID }}
+      APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
