--- a/web/angular.json
+++ b/web/angular.json
@@ -41,13 +41,13 @@
 							"budgets": [
 								{
 									"type": "initial",
-									"maximumWarning": "500kb",
-									"maximumError": "1mb"
+									"maximumWarning": "4mb",
+									"maximumError": "5mb"
 								},
 								{
 									"type": "anyComponentStyle",
-									"maximumWarning": "2kb",
-									"maximumError": "4kb"
+									"maximumWarning": "100kb",
+									"maximumError": "500kb"
 								}
 							],
 							"outputHashing": "all",
