--- a/internal/config/testdata/config.yml
+++ b/internal/config/testdata/config.yml
@@ -15,9 +15,9 @@ db:
   host: localhost
   port: 5432
   user: user
-  password: password
   dbname: testdb
   pool_max_conn_lifetime: 30m
   pool_max_conn_idletime: 10m
   pool_max_conns: 10
   pool_min_conns: 1
+  sslmode: disable
