--- a/web/package.json
+++ b/web/package.json
@@ -28,7 +28,8 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "ngx-spinner": "^16.0.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.14",
