--- a/charts/yunikorn-history-server/values.yaml
+++ b/charts/yunikorn-history-server/values.yaml
@@ -30,6 +30,21 @@ service:
   # -- Service node port
   nodePort: 30003
 
+ingress:
+  # -- Toggle whether to render Ingress resource
+  enabled: true
+  # -- Specify which ingress class should be used
+  className: ""
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  tls: []
+  hosts:
+    - host: chart-example.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+
 yhs:
   # -- YHS port
   port: 8989
