--- a/charts/yunikorn-history-server/templates/deployment.yaml
+++ b/charts/yunikorn-history-server/templates/deployment.yaml
@@ -39,6 +39,7 @@ spec:
         - name: "yunikorn-history-server"
           image: "{{ include "yunikorn-history-server.image" . }}"
           imagePullPolicy: "{{ $imagePullPolicy }}"
+          command: ["/app/yunikorn-history-server"]
           args:
             - "--config"
             - "/app/config/config.yaml"
