--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,8 @@
     "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js",
     "setenv": "npx --yes ts-node ./src/environments/setEnvironmentVariables.ts",
     "setenv:prod": "npx --yes ts-node ./src/environments/setEnvironmentVariables.ts prod",
-    "prebuild:prod": "pnpm set-env-vars"
+    "prebuild:prod": "pnpm set-env-vars",
+    "start:json-server": "json-server --watch mock-server/db.json --routes mock-server/routes.json"
   },
   "private": true,
   "dependencies": {
