--- a/web/package.json
+++ b/web/package.json
@@ -7,27 +7,19 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js",
-    "setenv": "npx --yes ts-node ./src/environments/setEnvironmentVariables.ts",
-    "setenv:prod": "npx --yes ts-node ./src/environments/setEnvironmentVariables.ts prod",
-    "prebuild:prod": "pnpm set-env-vars",
-    "start:json-server": "json-server --watch mock-server/db.json --routes mock-server/routes.json"
+    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
   "dependencies": {
     "@angular-architects/module-federation": "^16.0.4",
     "@angular/animations": "^16.2.0",
-    "@angular/cdk": "^16.2.9",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
-    "@angular/material": "^16.2.9",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "moment": "^2.29.4",
-    "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -38,7 +30,6 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
-    "json-server": "^0.17.4",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
