--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,10 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
+    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js",
+    "setenv": "npx --yes ts-node ./src/environments/setEnvironmentVariables.ts",
+    "setenv:prod": "npx --yes ts-node ./src/environments/setEnvironmentVariables.ts prod",
+    "prebuild:prod": "pnpm set-env-vars"
   },
   "private": true,
   "dependencies": {
@@ -17,12 +20,16 @@
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.9",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@angular/cdk": "^16.2.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "moment": "^2.29.4",
+    "ngx-spinner": "^16.0.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.14",
