--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@angular-architects/module-federation": "^16.0.4",
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.9",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
@@ -24,12 +25,11 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "@angular/cdk": "^16.2.9",
+    "moment": "^2.29.4",
+    "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0",
-    "moment": "^2.29.4",
-    "ngx-spinner": "^16.0.2"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.14",
@@ -37,6 +37,7 @@
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
+    "json-server": "^1.0.0-beta.2",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
