--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,8 @@
     "setenv": "npx --yes ts-node ./src/environments/setEnvironmentVariables.ts",
     "setenv:prod": "npx --yes ts-node ./src/environments/setEnvironmentVariables.ts prod",
     "prebuild:prod": "pnpm set-env-vars",
-    "start:json-server": "json-server --watch mock-server/db.json --config mock-server/server.json"
+    "start:json-server": "json-server --watch mock-server/db.json --config mock-server/server.json",
+    "prettify": "prettier --config ./.prettierrc --write 'src/**/*.{js,ts,json,css,scss,md,html}'"
   },
   "private": true,
   "dependencies": {
@@ -45,6 +46,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ngx-build-plus": "^18.0.0",
+    "prettier": "^3.3.3",
     "typescript": "~5.5.4"
   }
 }
