--- a/config/yunikorn-history-server/config.yml
+++ b/config/yunikorn-history-server/config.yml
@@ -17,6 +17,16 @@ db:
 yhs:
   port: 8989
   data_sync_interval: 5m
+  cors:
+    allowed_origins:
+      - "*"
+    allowed_methods:
+      - "GET"
+      - "POST"
+      - "PUT"
+      - "DELETE"
+    allowed_headers:
+      - "*"
 
 log:
   level: "INFO"
