--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,6 +104,24 @@ jobs:
       - name: Run Go Integration Tests
         run: make integration-tests
 
+  codegen:
+    if: github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
+    name: Check codegen diff
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: ./.github/actions/setup-go
+        with:
+          cache-prefix: generate
+
+      - name: Generate code
+        run: make codegen
+      - name: Check diff
+        run: git diff --exit-code
+
   build:
     if: github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
     name: Build (${{ matrix.os }}/${{ matrix.arch }})
@@ -111,10 +129,11 @@ jobs:
       - go-lint
       - go-unit-tests
       - go-integration-tests
+      - codegen
     strategy:
       matrix:
-        os: [ linux ]
-        arch: [ amd64, arm64 ]
+        os: [linux]
+        arch: [amd64, arm64]
         include:
           - os: linux
             runner: ubuntu-latest
