Use 'yhs' as a default database instead of 'postgres'

--- a/charts/yunikorn-history-server/values.yaml
+++ b/charts/yunikorn-history-server/values.yaml
@@ -35,7 +35,8 @@ ingress:
   enabled: true
   # -- Specify which ingress class should be used
   className: ""
-  annotations: {}
+  annotations:
+    {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   tls: []
@@ -62,7 +63,7 @@ db:
   # -- YHS database port
   port: "5432"
   # -- YHS database name
-  name: "postgres"
+  name: "yhs"
   # -- YHS database user
   user: "postgres"
   # -- YHS database password (insecure, use secrets)
@@ -89,7 +90,7 @@ yunikorn:
   protocol: "http"
 
 log:
-    # -- Output type of the log, if true, log will be output in json format
-    jsonFormat: true
-    # -- Log level, one of DEBUG, INFO, WARN, ERROR, DPANIC, PANIC, FATAL
-    level: "INFO"
+  # -- Output type of the log, if true, log will be output in json format
+  jsonFormat: true
+  # -- Log level, one of DEBUG, INFO, WARN, ERROR, DPANIC, PANIC, FATAL
+  level: "INFO"
