--- a/config/yunikorn-history-server/local.yml
+++ b/config/yunikorn-history-server/local.yml
@@ -6,7 +6,7 @@ yunikorn:
 db:
   host: 127.0.0.1
   port: 30002
-  dbname: postgres
+  dbname: yhs
   user: postgres
   password: psw
   pool_max_conns: 0
