Add CORS middleware (#199)
* Implement CORS middleware.

--- a/config/yunikorn-history-server/config.yml
+++ b/config/yunikorn-history-server/config.yml
@@ -17,6 +17,13 @@ db:
 yhs:
   port: 8989
   data_sync_interval: 5m
+  cors:
+    allowed_origins:
+      - "*"
+    allowed_methods:
+      - "GET"
+    allowed_headers:
+      - "*"
 
 log:
   level: "INFO"
