--- a/internal/config/testdata/config.yml
+++ b/internal/config/testdata/config.yml
@@ -1,6 +1,13 @@
 yhs:
   port: 8080
   assets_dir: assets
+  cors:
+    allowed_origins:
+      - "*"
+    allowed_methods:
+      - "GET"
+    allowed_headers:
+      - "*"
 
 yunikorn:
   host: localhost
@@ -21,3 +28,4 @@ db:
   pool_max_conns: 10
   pool_min_conns: 1
   sslmode: disable
+
