--- a/web/package.json
+++ b/web/package.json
@@ -16,17 +16,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-architects/module-federation": "^18.0.4",
-    "@angular/animations": "^18.2.2",
-    "@angular/cdk": "^18.2.2",
-    "@angular/common": "^18.2.2",
-    "@angular/compiler": "^18.2.2",
-    "@angular/core": "^18.2.2",
-    "@angular/forms": "^18.2.2",
-    "@angular/material": "^18.2.2",
-    "@angular/platform-browser": "^18.2.2",
-    "@angular/platform-browser-dynamic": "^18.2.2",
-    "@angular/router": "^18.2.2",
+    "@angular-architects/module-federation": "^18.0.6",
+    "@angular/animations": "^18.2.5",
+    "@angular/cdk": "^18.2.5",
+    "@angular/common": "^18.2.5",
+    "@angular/compiler": "^18.2.5",
+    "@angular/core": "^18.2.5",
+    "@angular/forms": "^18.2.5",
+    "@angular/material": "^18.2.5",
+    "@angular/platform-browser": "^18.2.5",
+    "@angular/platform-browser-dynamic": "^18.2.5",
+    "@angular/router": "^18.2.5",
+    "@fontsource/roboto": "^5.1.0",
     "moment": "^2.30.1",
     "ngx-spinner": "^17.0.0",
     "rxjs": "~7.8.1",
@@ -34,11 +35,11 @@
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.1",
-    "@angular/cli": "^18.2.1",
-    "@angular/compiler-cli": "^18.2.2",
+    "@angular-devkit/build-angular": "^18.2.5",
+    "@angular/cli": "^18.2.5",
+    "@angular/compiler-cli": "^18.2.5",
     "@types/jasmine": "~5.1.4",
-    "jasmine-core": "~5.2.0",
+    "jasmine-core": "~5.3.0",
     "json-server": "^0.17.4",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
@@ -47,6 +48,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "ngx-build-plus": "^18.0.0",
     "prettier": "^3.3.3",
-    "typescript": "~5.5.4"
+    "typescript": "5.5.4"
   }
 }
